Closed
Bug 267590
Opened 21 years ago
Closed 21 years ago
don't try to open separators as tabs when doing open folder in tabs
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino0.9
People
(Reporter: jaas, Assigned: jaas)
References
Details
Attachments
(1 file)
|
726 bytes,
patch
|
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
1. Make a folder
2. add a separator to it
3. open folder in tabs
Actual Result:
separator gets opened as blank tab
Expected Result:
Shouldn't try to open separator
Attachment #164503 -
Flags: superreview?(pinkerton)
Comment 2•21 years ago
|
||
Comment on attachment 164503 [details] [diff] [review]
fix v1.0
sr=pink
Attachment #164503 -
Flags: superreview?(pinkerton) → superreview+
Comment 3•21 years ago
|
||
Fix checked in by josh.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•