don't try to open bookmark separators as bookmarks when opening a bm folder (bug 267590) sr=pinkerton